<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?actionBarTheme"
        android:background="#FDD835"
        android:elevation="0dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardsearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/white">

            <ImageButton
                android:id="@+id/main_search_btn"
                style="?android:buttonBarButtonStyle"
                android:layout_width="42dp"
                android:layout_height="44dp"
                android:paddingBottom="10dp"
                android:src="@drawable/search"
                android:contentDescription="@string/search_logo"/>

            <EditText
                android:id="@+id/main_search_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:backgroundTint="#00FFFFFF"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/search_recipes"
                android:inputType="textAutoComplete"
                android:imeOptions="flagNoExtractUi"
                android:textColor="@color/black"
                android:autofillHints=""/>

        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.Toolbar>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/swipe_layout"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler_view"
            android:scrollbars="vertical"/>

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/no_results"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.constraintlayout.widget.ConstraintLayout>